Updated docker compose, services names and use vpn for vllm

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 name: ca
 services:
   frontend:
+    container_name: ca-frontend
     build:
       context: comment-analysis-frontend/.
       dockerfile: Dockerfile
@@ -14,6 +15,7 @@ services:
       - backend
 
   backend:
+    container_name: ca-backend
     build:
       context: comment-analysis/.
       dockerfile: Dockerfile
@@ -48,29 +50,49 @@ services:
       - db
 
   analysis-service:
+    container_name: ca-analysis-service
     build:
       context: ./ca-service-analysis
     command: bash /app/scripts/run_service.sh
+    restart: always
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
       - POSTGRES_DB=ca-app
-      - VLLM_HOST=localhost
-      - VLLM_PORT=8080
+      - VLLM_HOST=10.0.2.6
+      - VLLM_PORT=9000
       - PREFECT_API_URL=http://analysis-service-monitoring:4200/api
       - LOGURU_LEVEL=WARNING
     depends_on:
-      - analysis-service-monitoring
+      # - analysis-service-monitoring
+      - db
+
+  db-monitor:
+    container_name: ca-db-monitor
+    build:
+      context: ./ca-service-analysis
+    command: streamlit run src/st_monitor.py --server.port 8501 --server.address 0.0.0.0
+    ports:
+      - "4001:8501"
+    environment:
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=ca-app
+    depends_on:
+      # - analysis-service-monitoring
       - db
 
   analysis-service-monitoring:
+    container_name: ca-analysis-service-monitor
     build:
       context: ./ca-service-analysis
     command: bash /app/scripts/run_prefect.sh
     ports:
-      - 4200:4200
+      - 4002:4200
     volumes:
       - prefect-data:/root/.prefect/
     healthcheck:
